--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./todobackend
-          file: ./todobackend/Dockerfile
+          context: .
+          file: ./Dockerfile
           push: true
           tags: gcr.io/todogoals-ea6d4/todobackend:latest
           build-args: |
