--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/firestore": "^7.11.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "socket.io": "^4.8.1"
@@ -21,6 +22,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "@types/socket.io": "^3.0.1",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
