--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/firestore": "^7.11.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "firebase-admin": "^13.0.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
